name:                wlp
version:             0.0.0.1
synopsis:            Weakest liberal precondition engine
description:         Please see README.md
--homepage:            http://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name Carlos Tomé
maintainer:          carlostome1990@gmail.com
copyright:           2016 Author Carlos Tomé
category:            Web
build-type:          Simple
extra-source-files:  stack.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:    
                       WLP,
                       Example

  build-depends:       base >= 4.7 && < 5,
                       containers,
                       sbv,
                       mtl,
                       Stream,
                       ansi-wl-pprint
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-incomplete-patterns
